--- a/case-01.html
+++ b/case-01.html
@@ -82,11 +82,11 @@
 				// 将平面添加到场景中
 				createPlaneGeometryBasicMaterial();
 				// 立方体
-				// createBoxGeometryBasicMaterial();
+				createBoxGeometryBasicMaterial();
 				creatRoadSurface();
-				// createRoundGeometryBasicMaterialMax();
-				// createRoundGeometryBasicMaterialMin();
-				// crateWall();
+				createRoundGeometryBasicMaterialMax();
+				createRoundGeometryBasicMaterialMin();
+				crateWall();
 
 				// 将呈现器的输出添加到HTML元素
 				document.getElementById("dom").appendChild(renderer.domElement);
